last commit of academia de codigo

--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src="typer.js"></script>
+
     <link rel="stylesheet" href="style.css" type="text/css">
+
 
 </head>
 
 <body>
 
     <div id="console"></div>
+    <div id="line"></div>
+    <div id="error"></div>
 
 </body>
 
